--- a/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Countries/Create.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Countries/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model VisitACity.Web.ViewModels.Administration.Countries.CreateCountryInputModel
+﻿@model VisitACity.Web.ViewModels.Administration.Countries.CountryFormModel
 @{
     this.ViewData["Title"] = "Create country";
 }
