--- a/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Restaurants/Create.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Restaurants/Create.cshtml
@@ -1,8 +1,8 @@
-﻿@model VisitACity.Web.ViewModels.Administration.Restaurants.CreateRestaurantInputModel
+﻿@model VisitACity.Web.ViewModels.Administration.Restaurants.RestaurantFromModel
 @{
     this.ViewData["Title"] = "Create restaurant";
 }
-<h1> Create restaurant</h1>
+<h1 class="text-center"> Create restaurant</h1>
 <div asp-validation-summary="All" class="text-danger"></div>
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
