--- a/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Attractions/Create.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Attractions/Create.cshtml
@@ -1,8 +1,8 @@
-﻿@model VisitACity.Web.ViewModels.Administration.Attractions.CreateAttractionInputModel
+﻿@model VisitACity.Web.ViewModels.Administration.Attractions.AttractionFormModel
 @{
     this.ViewData["Title"] = "Create attraction";
 }
-<h1> Create attraction</h1>
+<h1 class="text-center"> Create attraction</h1>
 <div asp-validation-summary="All" class="text-danger"></div>
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
