--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
@@ -4,9 +4,8 @@
     var imagePath = $"~/images/Attractions/{Model.Images.FirstOrDefault().Id}.{Model.Images.FirstOrDefault().Extension}";
 }*@
 <div class="media col-md-4">
-
     <a asp-controller="Attractions" asp-action="Details" asp-route-id="@Model.Id">
-        <img class="card-img-top" src="@Model.ImageUrl" alt="Card image cap" />
+        <img class="mr-3 img-responsive" width="400" height="300" src="@Model.ImageUrl" alt="Card image cap" />
     </a>
     <div class="card-body">
         <h4 class="card-title text-center">@Model.Name</h4>
