--- a/VisitACity/Web/VisitACity.Web/Views/Plans/_PlanPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/_PlanPartial.cshtml
@@ -8,8 +8,11 @@
     <td>@Model.Days</td>
     <td>
         <button type="button" class="btn btn-primary"><i class="far fa-eye"></i>View</button>
-        <button type="button" class="btn btn-success"><i class="fas fa-edit"></i>Edit</button>
-        <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-controller="Plans" data-action="Delete" data-body-message="Are you sure you want to delete this plan?">Delete</a>
+      @*  <button type="button" class="btn btn-success"><i class="fas fa-edit"></i>Edit</button>*@
+        <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-controller="Plans" data-action="Delete" data-body-message="Are you sure you want to delete this plan?">
+            <i class="fas fa-trash"></i>
+            Delete
+        </a>
         @*<form asp-controller="Plans" asp-action="Delete" asp-route-id="@Model.Id">
             <input type="submit" value="Delete" class="btn btn-danger delete mb-2 fas fa-delete" />
         </form>*@
