--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -8,58 +8,43 @@
 {
     <div class="alert alert-success">@this.TempData["Message"]</div>
 }
-<form>
-    <div class="text-center">
-        <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-        <h2>
-            Create Your Personal Travel Guide
-            <a asp-controller="Plans" asp-action="Create">Here</a>
-        </h2>
-        <h3 style="margin-top:50px" ; class="display-12">Where are you travelling to?</h3>
-        <div class="container">
-            <div class="input-group" style="margin-top:50px">
-                <input type="text" class="form-control py-2" name="cityName" placeholder="City in Bulgaria" />
-                <button class="btn btn-outline-primary border-right-0 border"
-                        type="button">
-                    Search
-                </button>
-            </div>
+
+<div class="text-center">
+    <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
+    <h2>
+        Create Your Personal Travel Guide
+        <a asp-controller="Plans" asp-action="Create">Here</a>
+    </h2>
+    <h3 style="margin-top:50px" ; class="display-12">Where are you travelling to?</h3>
+    <form asp-action="Index" method="Get" class="col-md-6 offset-md-3"> 
+        <div class="form-group">
+            <input name="cityName" class="form-control" />
         </div>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-        <label class="form-check-label" for="flexRadioDefault1">
-            Attractions
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-        <label class="form-check-label" for="flexRadioDefault2">
-            Restaurants
-        </label>
-    </div>
-</form>
+         <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+
+</div>
 <hr>
 <cache expires-after="@TimeSpan.FromHours(8)">
     <div class="h-10 d-inline-block, container" style="position:absolute; background-color: whitesmoke">
-    <div class="row align-items-center">
-        <div class="col-sm">
-            <div class="feature-icon">
-                <i class="fa fa-city"></i> <span>@Model.CitiesCount Cities</span>
+        <div class="row align-items-center">
+            <div class="col-sm">
+                <div class="feature-icon">
+                    <i class="fa fa-city"></i> <span>@Model.CitiesCount Cities</span>
+                </div>
             </div>
-        </div>
-        <div class="col-sm">
-            <div class="feature-icon">
-                <i class="fa fa-eye"></i> <span>@Model.AttractionsCount Attractions</span>
+            <div class="col-sm">
+                <div class="feature-icon">
+                    <i class="fa fa-eye"></i> <span>@Model.AttractionsCount Attractions</span>
+                </div>
             </div>
-        </div>
-        <div class="col-sm">
-            <div class="feature-icon">
-                <i class="fa fa-utensils"></i> <span>@Model.RestaurantCount Restaurants</span>
+            <div class="col-sm">
+                <div class="feature-icon">
+                    <i class="fa fa-utensils"></i> <span>@Model.RestaurantCount Restaurants</span>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </cache>
 <br>
 <p></p>
