--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_PagingPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_PagingPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using VisitACity.Web.ViewModels.Attractions
-@model AttractionsListViewModel
+﻿@using VisitACity.Web.ViewModels.Home
+@model IndexViewModel
 <nav aria-label="...">
     <ul class="pagination justify-content-center">
         <li class="page-item @if (!Model.HasPreviousPage) {
