fix search paging

--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
     <h3 style="margin-top:50px" ; class="display-12">Where are you travelling to?</h3>
 </div>
 <br>
-<form method="Get" class="col-md-6 offset-md-3">
+<form method="Get" asp-route-id = "1" class="col-md-6 offset-md-3">
     <div class="form-group col-md-6 offset-md-3">
         <input name="cityName" class="form-control" />
     </div>
