--- a/VisitACity/Web/VisitACity.Web/Views/Restaurants/_RestaurantCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Restaurants/_RestaurantCard.cshtml
@@ -12,6 +12,7 @@
         <p></p>
         <h5 class="card-text text-center">City: @Model.CityName</h5>
         <div class="card-text">Address: @Model.Address</div>
+        <div class="card-text">Phone: @Model.PhoneNumber</div>
         <p></p>
 
     </div>
