--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_PagingPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_PagingPartial.cshtml
@@ -5,13 +5,29 @@
         <li class="page-item @if (!Model.HasPreviousPage) {
         <text>disabled</text>
  }">
-            <a class="page-link" asp-action="Index" asp-route-id="@Model.PreviousPageNumber">Previous</a>
+            @if (Model.queryModel == null)
+            {
+                    <a class="page-link" asp-action="Index" asp-route-id="@Model.PreviousPageNumber">Previous</a>
+            }
+            else
+            {
+                    <a class="page-link" asp-action="Index" asp-route-id="@Model.PreviousPageNumber" asp-route-cityName="@Model.queryModel.CityName" asp-route-radioOption="@Model.queryModel.RadioOption">Previous</a>
+
+            }
         </li>
         @for (int i = Model.PageNumber - 4; i < Model.PageNumber; i++)
         {
             if (i > 0)
             {
+                @if (Model.queryModel == null)
+                {
                 <li class="page-item"><a class="page-link" asp-action="Index" asp-route-id="@i">@i</a></li>
+                    
+                }
+                else
+                {
+                <li class="page-item"><a class="page-link" asp-action="Index" asp-route-id="@i" asp-route-cityName="@Model.queryModel.CityName" asp-route-radioOption="@Model.queryModel.RadioOption">@i</a></li>
+                }
             }
         }
         <li class="page-item active" aria-current="page">
@@ -24,13 +40,31 @@
         {
             if (i <= Model.PagesCount)
             {
+                @if (Model.queryModel == null)
+                {
                 <li class="page-item"><a class="page-link" asp-action="Index" asp-route-id="@i">@i</a></li>
+                    
+                }
+                else
+                {
+                <li class="page-item"><a class="page-link" asp-action="Index" asp-route-id="@i" asp-route-cityName="@Model.queryModel.CityName" asp-route-radioOption="@Model.queryModel.RadioOption">@i</a></li>
+                    
+                }
             }
         }
         <li class="page-item @if (!Model.HasNextPage) {
         <text>disabled</text>
  }">
+        @if (Model.queryModel == null)
+            {
             <a class="page-link" asp-action="Index" asp-route-id="@Model.NextPageNumber">Next</a>
+                
+            }
+            else
+            {
+            <a class="page-link" asp-action="Index" asp-route-id="@Model.NextPageNumber" asp-route-cityName="@Model.queryModel.CityName" asp-route-radioOption="@Model.queryModel.RadioOption">Next</a>
+                    
+            }
         </li>
     </ul>
 </nav>
