another fix of paging

--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
@@ -11,8 +11,12 @@
         <h4 class="card-title text-center">@Model.Name</h4>
         <p></p>
         <h5 class="card-text text-center">City: @Model.CityName</h5>
-        <div class="card-text">Price: $@Model.Price</div>
-        <div class="card-text">Address: @Model.Address</div>
+        <div class="card-text feature-icon">
+            <i class="fa fa-dollar-sign"></i> <span>Price: @Model.Price</span>
+        </div>
+        <div class="card-text feature-icon">
+            <i class="fa fa-search-location"></i> <span>Address: @Model.Address</span>
+        </div>
         <p></p>
 
     </div>
