modal delete slow disapear

--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 <br>
 <form method="Get" asp-route-id = "1" class="col-md-6 offset-md-3">
     <div class="form-group col-md-6 offset-md-3">
-        <input name="cityName" class="form-control" />
+        <input name="cityName" class="form-control" placeholder="City" />
     </div>
     <fieldset class="col-md-6 offset-md-4">
         <div class="form-check">
