--- a/VisitACity/Web/VisitACity.Web/Views/Reviews/_PartialReview.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Reviews/_PartialReview.cshtml
@@ -1,27 +1,35 @@
 ﻿@using VisitACity.Web.ViewModels.Reviews
-@model ReviewAttractionViewModel
+@model ReviewRestaurantViewModel
 
-<div class="media; media-body" style="width: 100%; border: 1px, solid black">
-    <h5 class="mt-0">@Model.CreatedOn.ToShortDateString() by @ViewBag.UserFirstName</h5>
-    <div class="media-body">@Model.Content</div>
-    <div class="ratings">
-        <div class="stars">
-            @for (int i = 0; i < Model.Rating; i++)
-            {
-                <i class="fa fa-star"></i>
-            }
-
+<div class="card col-md-6 offset-md-3">
+    <div class="card-header row row-cols-lg-auto">
+        <div class="ratings col-12">
+            <div class="stars">
+                @for (int i = 0; i < Model.Rating; i++)
+                {
+                    <i class="fa fa-star"></i>
+                }
+            </div>
         </div>
-
     </div>
-    <div>
-        @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+    <div class="card-body">
+        <figure>
+            <blockquote class="blockquote">
+                <p>@Model.CreatedOn.ToShortDateString() by @ViewBag.UserFirstName
+                            @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
         {
             <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-area="Administration" data-controller="Reviews" data-action="Delete" data-body-message="Are you sure you want to delete this comment?">
                 <i class="fas fa-trash"></i>
                 Delete
             </a>
         }
+                </p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+                @Model.Content
+            </figcaption>
+        </figure>
     </div>
 
 </div>
+<br>
