--- a/VisitACity/Web/VisitACity.Web/Views/Reviews/_PartialReview.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Reviews/_PartialReview.cshtml
@@ -13,23 +13,20 @@
         </div>
     </div>
     <div class="card-body">
-        <figure>
-            <blockquote class="blockquote">
-                <p>@Model.CreatedOn.ToShortDateString() by @ViewBag.UserFirstName
-                            @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
-        {
-            <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-area="Administration" data-controller="Reviews" data-action="Delete" data-body-message="Are you sure you want to delete this comment?">
-                <i class="fas fa-trash"></i>
-                Delete
-            </a>
-        }
-                </p>
-            </blockquote>
-            <figcaption class="blockquote-footer">
-                @Model.Content
-            </figcaption>
-        </figure>
+         @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+            {
+                <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-area="Administration" data-controller="Reviews" data-action="Delete" data-body-message="Are you sure you want to delete this comment?">
+                    <i class="fas fa-trash"></i>
+                    Delete
+                </a>
+            }
+        <p class="blockquote">
+            @Model.CreatedOn.ToShortDateString() by @ViewBag.UserFirstName
+           
+        </p>
+        <figcaption class="blockquote-footer">
+            @Model.Content
+        </figcaption>
     </div>
-
 </div>
 <br>
