restaurants with administration

--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
@@ -54,28 +54,12 @@
                     @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
                     {
                         <a class="btn btn-outline-dark" asp-area="Administration" asp-controller="Attractions" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-                        <a class="btn btn-outline-danger delete" data-id="@Model.Id" data-area="Administration" data-controller="Attractions" data-action="Delete" data-body-message="Are you sure you want to delete this attraction?" data-redirect-url="/Home/Index">
+                        <a class="btn btn-outline-danger delete" data-id="@Model.Id" data-area="Administration" data-controller="Attractions" data-action="Delete" data-body-message="Are you sure you want to delete this attraction?" data-redirect-url="/Home/Index/1?cityName=@Model.CityName&radioOption=Attractions">
                             Delete
                         </a>
                     }
                 </div>
                 <h2 class="text-center">Comments:</h2>
-                @if (Model.Reviews.Count() == 0)
-                {
-                    <div class="text-center">
-                        No comments yet. Be the first to comment this attraction
-                        <a asp-controller="Reviews" asp-action="Create" asp-route-id="@Model.Id">Here</a>
-                    </div>
-                    <br>
-                }
-                else
-                {
-                    @foreach (var review in Model.Reviews.OrderByDescending(x => x.CreatedOn))
-                    {
-                        <partial name="~/Views/Reviews/_PartialReview.cshtml" , model="review" />
-                    }
-                }
-
             </div>
         </div>
     </div>
