--- a/VisitACity/Web/VisitACity.Web/Views/Restaurants/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Restaurants/Details.cshtml
@@ -20,7 +20,7 @@
 
                 <span class="product-rating">@Model.Rating.ToString("f1")</span><span>/5</span>
                 <div class="stars">
-                    @for (int i = 1; i < Model.Rating; i++)
+                    @for (int i = 0; i < Math.Round(Model.Rating); i++)
                     {
                         <i class="fa fa-star"></i>
                     }
@@ -41,23 +41,31 @@
             <i class="fa fa-bus"></i> <span>Add to plan</span>
         </div>
     </a>
+    @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+    {
+        <a class="btn btn-outline-dark" asp-area="Administration" asp-controller="Restaurants" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+        <a class="btn btn-outline-danger delete" data-id="@Model.Id" data-area="Administration" data-controller="Restaurants" data-action="Delete" data-body-message="Are you sure you want to delete this attraction?" data-redirect-url="/Home/Index/1?cityName=@Model.CityName&radioOption=Restaurants">
+            Delete
+        </a>
+    }
 </div>
 <p></p>
 </div>
 
- <h2 class="text-center">Comments:</h2>
-                @if (Model.Reviews.Count() == 0)
-                {
-                    <div class="text-center">
-                        No comments yet. Be the first to comment this restaurant
-                        <a asp-controller="Reviews" asp-action="Create" asp-route-id="@Model.Id">Here</a>
-                    </div>
-                    <br>
-                }
-                else
-                {
-                    @foreach (var review in Model.Reviews.OrderByDescending(x => x.CreatedOn))
-                    {
-                        <partial name="~/Views/Reviews/_PartialReview.cshtml" , model="review" />
-                    }
-                }
+<h2 class="text-center">Comments:</h2>
+@if (Model.Reviews.Count() == 0)
+{
+    <div class="text-center">
+        No comments yet. Be the first to comment this restaurant
+        <a asp-controller="Reviews" asp-action="Create" asp-route-id="@Model.Id">Here</a>
+    </div>
+    <br>
+}
+else
+{
+    @foreach (var review in Model.Reviews.OrderByDescending(x => x.CreatedOn))
+    {
+        <partial name="~/Views/Reviews/_PartialReview.cshtml" , model="review" />
+        <br>
+    }
+}
