--- a/VisitACity/Web/VisitACity.Web/Views/Restaurants/_RestaurantCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Restaurants/_RestaurantCard.cshtml
@@ -32,7 +32,7 @@
 
                     <span class="product-rating">@Model.Rating.ToString("f1")</span><span>/5</span>
                     <div class="stars">
-                        @for (int i = 1; i < Model.Rating; i++)
+                        @for (int i = 0; i < Math.Round(Model.Rating); i++)
                         {
                             <i class="fa fa-star"></i>
                         }
