flex nav bar and reviewed by users implementation

--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="alert alert-success">@this.TempData["Message"]</div>
 }
 
-<div class="text-center">
+<div class="text-center page-header">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
     <h2>
         Create Your Personal Travel Guide
@@ -42,7 +42,7 @@
 
 <hr>
 <cache expires-after="@TimeSpan.FromHours(8)">
-    <div class="h-10 d-inline-block, container" style="position:absolute; background-color: whitesmoke">
+    <div class="h-10 d-inline-block, container" style="position:absolute;background-color: whitesmoke">
         <div class="row align-items-center">
             <div class="col-sm">
                 <div class="feature-icon">
