my plans bootstrap

--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 }
 
 <div class="text-center page-header">
-    <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
+    <h1 class="display-4">Welcome to Visit<span class="feature-icon"><i class="fa fa-mountain"></i></span>City</h1>
     <h2>
         Create Your Personal Travel Guide
         <a asp-controller="Plans" asp-action="Create">Here</a>
