--- a/VisitACity/Web/VisitACity.Web/Views/Plans/MyPlans.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/MyPlans.cshtml
@@ -15,30 +15,26 @@
 }
 else
 {
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">City</th>
-                            <th scope="col">Country</th>
-                            <th scope="col">From</th>
-                            <th scope="col">To</th>
-                            <th scope="col">Days</th>
-                            <th scope="col">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.Plans)
-                        {
-                            <partial name="_PlanPartial" , model="item" />
-                            ;
-                        }
-                    </tbody>
-                </table>
-            </div>
-        </div>
+   <div class="container shadow py-2">
+    <div class="table-responsive">
+        <table class="table accordion">
+            <thead>
+                <tr>
+                    <th scope="col">City</th>
+                    <th scope="col">Country</th>
+                    <th scope="col">From</th>
+                    <th scope="col">To</th>
+                    <th scope="col">Days</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Plans)
+                {
+                    <partial name="_PlanPartial" , model="item" />
+                }
+            </tbody>
+        </table>
     </div>
+</div>
 }
-
