--- a/VisitACity/Web/VisitACity.Web/Views/Plans/_PlanPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/_PlanPartial.cshtml
@@ -1,20 +1,46 @@
 ﻿@model VisitACity.Web.ViewModels.Plans.PlanViewModel
-
-<tr>
-    <th scope="row">@Model.City</th>
+@{
+    var rnumTarget = "#" + "r" + Model.Id;
+    var id = "r" + Model.Id;
+}
+<tr data-bs-toggle="collapse" data-bs-target=@rnumTarget>
+    <th scope="row"> <i class="fa fa-angle-down"></i> @Model.City</th>
     <td>@Model.Country</td>
     <td>@Html.DisplayFor(x => x.FromDate)</td>
     <td>@Html.DisplayFor(x => x.ToDate)</td>
     <td>@Model.Days</td>
     <td>
-        <button type="button" class="btn btn-primary"><i class="far fa-eye"></i>View</button>
-      @*  <button type="button" class="btn btn-success"><i class="fas fa-edit"></i>Edit</button>*@
-        <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-controller="Plans" data-action="Delete" data-body-message="Are you sure you want to delete this plan?"@*data-redirect-url="/Home/Index"*@>
+        <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-controller="Plans" data-action="Delete" data-body-message="Are you sure you want to delete this plan?" data-redirect-url="/Plans/MyPlans">
             <i class="fas fa-trash"></i>
             Delete
         </a>
-        @*<form asp-controller="Plans" asp-action="Delete" asp-route-id="@Model.Id">
-            <input type="submit" value="Delete" class="btn btn-danger delete mb-2 fas fa-delete" />
-        </form>*@
+    </td>
+</tr>
+
+<tr class="collapse accordion-collapse" id=@id data-bs-parent=".table">
+    <td colspan="5">
+<ol class="list-group list-group-numbered">
+  <li class="list-group-item d-flex justify-content-between align-items-start">
+    <div class="ms-2 me-auto">
+      <div class="fw-bold">Subheading</div>
+      Content for list item
+    </div>
+    <span class="badge bg-primary rounded-pill">14</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-start">
+    <div class="ms-2 me-auto">
+      <div class="fw-bold">Subheading</div>
+      Content for list item
+    </div>
+    <span class="badge bg-primary rounded-pill">14</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-start">
+    <div class="ms-2 me-auto">
+      <div class="fw-bold">Subheading</div>
+      Content for list item
+    </div>
+    <span class="badge bg-primary rounded-pill">14</span>
+  </li>
+</ol>
     </td>
 </tr>
