--- a/VisitACity/Web/VisitACity.Web/Views/Plans/_PlanPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/_PlanPartial.cshtml
@@ -19,28 +19,21 @@
 
 <tr class="collapse accordion-collapse" id=@id data-bs-parent=".table">
     <td colspan="5">
-<ol class="list-group list-group-numbered">
-  <li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
-      <div class="fw-bold">Subheading</div>
-      Content for list item
-    </div>
-    <span class="badge bg-primary rounded-pill">14</span>
-  </li>
-  <li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
-      <div class="fw-bold">Subheading</div>
-      Content for list item
-    </div>
-    <span class="badge bg-primary rounded-pill">14</span>
-  </li>
-  <li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
-      <div class="fw-bold">Subheading</div>
-      Content for list item
-    </div>
-    <span class="badge bg-primary rounded-pill">14</span>
-  </li>
-</ol>
+        <ol class="list-group list-group-numbered">
+            @foreach (var attraction in @Model.MyAttractions)
+            {
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">@attraction.Name</div>
+                        @attraction.Description
+                        <br>
+                        Visit the attraction <a asp-action="Details" asp-controller="Attractions" asp-route-id="@attraction.Id">here</a>
+                    </div>
+                    <a class="badge bg-primary rounded-pill btn btn-danger delete mb-2 fas fa-delete delete" data-id="@attraction.Id" data-controller="Plans" data-action="DeleteAttractionFromPlan" data-body-message="Are you sure you want to delete this attraction?"> 
+                        <i class="fas fa-trash"></i>
+                     </a>
+                </li>
+            }
+        </ol>
     </td>
 </tr>
