--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
@@ -31,7 +31,7 @@
                 <i class="fa fa-info-circle"></i> <span>Details</span>
             </div>
         </a>
-        <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan" asp-route-id="@Model.Id">
+        <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan" asp-route-attractionId="@Model.Id">
             <div class="feature-icon">
                 <i class="fa fa-bus"></i> <span>Add to plan</span>
             </div>
