my plans implementation

--- a/VisitACity/Web/VisitACity.Web/Views/Restaurants/_RestaurantCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Restaurants/_RestaurantCard.cshtml
@@ -47,7 +47,7 @@
                 <i class="fa fa-info-circle"></i> <span>Details</span>
             </div>
         </a>
-        <a class="btn btn-success" asp-controller="Plans" asp-action="AddRestaurantToPlan" asp-route-id="@Model.Id">
+        <a class="btn btn-success" asp-controller="Plans" asp-action="AddRestaurantToPlan" asp-route-restaurantId="@Model.Id">
             <div class="feature-icon">
                 <i class="fa fa-bus"></i> <span>Add to plan</span>
             </div>
