--- a/VisitACity/Web/VisitACity.Web/Views/Plans/_PlanPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/_PlanPartial.cshtml
@@ -19,6 +19,10 @@
 
 <tr class="collapse accordion-collapse" id=@id data-bs-parent=".table">
     <td colspan="5">
+        @if (!Model.MyAttractions.Any())
+        {
+            <div>No attractions added to this plan yet.</div>
+        }
         <ol class="list-group list-group-numbered">
             @foreach (var attraction in @Model.MyAttractions)
             {
@@ -29,9 +33,22 @@
                         <br>
                         Visit the attraction <a asp-action="Details" asp-controller="Attractions" asp-route-id="@attraction.Id">here</a>
                     </div>
-                    <a class="badge bg-primary rounded-pill btn btn-danger delete mb-2 fas fa-delete delete" data-id="@attraction.Id" data-controller="Plans" data-action="DeleteAttractionFromPlan" data-body-message="Are you sure you want to delete this attraction?"> 
+                    <a class="badge bg-primary rounded-pill btn btn-danger delete mb-2 fas fa-delete delete" data-route-planId="@Model.Id" data-route-attractionId="@attraction.Id" data-controller="Plans" data-action="DeleteAttractionFromPlan" data-body-message="Are you sure you want to delete this attraction?">
                         <i class="fas fa-trash"></i>
-                     </a>
+                    </a>
+                </li>
+            }
+            @foreach (var restaurant in @Model.MyRestaurants)
+            {
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold"><i class="fa fa-utensils"></i> @restaurant.Name</div>
+                        <br>
+                        Visit the restaurant <a asp-action="Details" asp-controller="Restaurants" asp-route-id="@restaurant.Id">here</a>
+                    </div>
+                    <a class="badge bg-primary rounded-pill btn btn-danger delete mb-2 fas fa-delete delete" data-route-planId="@Model.Id" data-route-restaurantId="@restaurant.Id" data-controller="Plans" data-action="DeleteRestaurantFromPlan" data-body-message="Are you sure you want to delete this restaurant?">
+                        <i class="fas fa-trash"></i>
+                    </a>
                 </li>
             }
         </ol>
