Attractions to plans implementation!

--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
@@ -21,7 +21,7 @@
 
     </div>
     <div class="card-footer">
-         <div class="card-text feature-icon">
+        <div class="card-text feature-icon">
             <i class="fa fa-eye"></i> <span>Revied by @Model.Reviews adventurers</span>
         </div>
     </div>
@@ -31,11 +31,23 @@
                 <i class="fa fa-info-circle"></i> <span>Details</span>
             </div>
         </a>
-        <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan" asp-route-attractionId="@Model.Id">
-            <div class="feature-icon">
-                <i class="fa fa-bus"></i> <span>Add to plan</span>
-            </div>
-        </a>
+       @* @if (Model.UserPlan != null)
+        {
+            <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan" asp-route-attractionId="@Model.Id" asp-route-planId="@Model.UserPlan.Id">
+                <div class="feature-icon">
+                    <i class="fa fa-bus"></i> <span>Add to plan</span>
+                </div>
+            </a>
+        }
+        else
+        {
+            <a class="btn btn-success" asp-controller="Plans" asp-action="Create" asp-route-cityId="@Model.CityId">
+                <div class="feature-icon">
+                    <i class="fa fa-bus"></i> <span>Add to plan</span>
+                </div>
+            </a>
+        }*@
+
     </div>
     <p></p>
 </div>
