--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
@@ -13,9 +13,9 @@
             <div class="col-lg-6 order-lg-2">
                 <div class="p-5"><img class="img-fluid rounded-circle" src="@Model.ImageUrl" alt="..."></div>
             </div>
-                  <form method="post" asp-action="SendToEmail" asp-route-id="@Model.Id">
-                            <button class="btn btn-warning">Send to my email</button>
-                        </form>
+            <form method="post" asp-action="SendToEmail" asp-route-id="@Model.Id">
+                <button class="btn btn-warning">Send to my email</button>
+            </form>
             <div class="col-lg-6 order-lg-1">
                 <div class="p-5">
                     <h2 class="display-4">@Model.Name</h2>
@@ -29,11 +29,22 @@
                     <p>@Model.Description</p>
                     <p>Price: $@Model.Price</p>
                     <p></p>
-                    <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan">
-                        <div class="feature-icon">
-                            <i class="fa fa-bus"></i> <span>Add to plan</span>
-                        </div>
-                    </a>
+                    @if (Model.UserPlan != null)
+                    {
+                        <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan" asp-route-attractionId="@Model.Id" asp-route-planId="@Model.UserPlan.Id">
+                            <div class="feature-icon">
+                                <i class="fa fa-bus"></i> <span>Add to plan</span>
+                            </div>
+                        </a>
+                    }
+                    else
+                    {
+                        <a class="btn btn-success" asp-controller="Plans" asp-action="Create" asp-route-cityId="@Model.CityId">
+                            <div class="feature-icon">
+                                <i class="fa fa-bus"></i> <span>Add to plan</span>
+                            </div>
+                        </a>
+                    }
                     @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
                     {
                         <a class="btn btn-outline-dark" asp-area="Administration" asp-controller="Attractions" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
