--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
@@ -39,7 +39,7 @@
                     }
                     else
                     {
-                        <a class="btn btn-success" asp-controller="Plans" asp-action="Create" asp-route-cityId="@Model.CityId">
+                         <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan" asp-route-attractionId="@Model.Id" asp-route-planId=0>
                             <div class="feature-icon">
                                 <i class="fa fa-bus"></i> <span>Add to plan</span>
                             </div>
