--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_AdminPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_AdminPartial.cshtml
@@ -10,6 +10,8 @@
     <li><a class="dropdown-item" asp-area="Administration" asp-controller="Restaurants" asp-action="Create">Create Restaurant</a></li>
     <li><a class="dropdown-item" asp-area="Administration" asp-controller="Cities" asp-action="Create">Create City</a></li>
     <li><a class="dropdown-item" asp-area="Administration" asp-controller="Countries" asp-action="Create">Create Country</a></li>
+     <li><a class="dropdown-item" asp-area="Administration" asp-controller="Cities" asp-action="Delete">Delete City</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Countries" asp-action="Delete">Dreate Country</a></li>
   </ul>
 </div>
 }
