--- a/VisitACity/Web/VisitACity.Web/wwwroot/css/themeCss.css
+++ b/VisitACity/Web/VisitACity.Web/wwwroot/css/themeCss.css
@@ -11027,3 +11027,18 @@ legend {
 .hiddenRow {
     padding: 0 !important;
 }
+
+body, html {
+    height: 100%;
+}
+
+.bg {
+    /* The image used */
+    background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(20).jpg");
+    /* Full height */
+    height: 50%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
